--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-webcam": "^7.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "three": "^0.146.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.186",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/three": "^0.146.0",
     "@types/uuid": "^8.3.4"
   }
 }
